@@ -1,10 +1,10 @@
-# Ansible role [bitbucket](https://galaxy.ansible.com/ui/standalone/roles/buluma/bitbucket/documentation)
+# [Ansible role bitbucket](#ansible-role-bitbucket)
 
 Ansible Role for Atlassian Bitbucket Installation
 
-|GitHub|Version|Issues|Pull Requests|Downloads|
-|------|-------|------|-------------|---------|
-|[![github](https://github.com/buluma/ansible-role-bitbucket/actions/workflows/molecule.yml/badge.svg)](https://github.com/buluma/ansible-role-bitbucket/actions/workflows/molecule.yml)|[![Version](https://img.shields.io/github/release/buluma/ansible-role-bitbucket.svg)](https://github.com/buluma/ansible-role-bitbucket/releases/)|[![Issues](https://img.shields.io/github/issues/buluma/ansible-role-bitbucket.svg)](https://github.com/buluma/ansible-role-bitbucket/issues/)|[![PullRequests](https://img.shields.io/github/issues-pr-closed-raw/buluma/ansible-role-bitbucket.svg)](https://github.com/buluma/ansible-role-bitbucket/pulls/)|[![Ansible Role](https://img.shields.io/ansible/role/d/buluma/bitbucket)](https://galaxy.ansible.com/ui/standalone/roles/buluma/bitbucket/documentation)|
+|GitHub|GitLab|Downloads|Version|
+|------|------|---------|-------|
+|[![github](https://github.com/buluma/ansible-role-bitbucket/workflows/Ansible%20Molecule/badge.svg)](https://github.com/buluma/ansible-role-bitbucket/actions)|[![gitlab](https://gitlab.com/shadowwalker/ansible-role-bitbucket/badges/master/pipeline.svg)](https://gitlab.com/shadowwalker/ansible-role-bitbucket)|[![downloads](https://img.shields.io/ansible/role/d/buluma/bitbucket)](https://galaxy.ansible.com/buluma/bitbucket)|[![Version](https://img.shields.io/github/release/buluma/ansible-role-bitbucket.svg)](https://github.com/buluma/ansible-role-bitbucket/releases/)|
 
 ## [Example Playbook](#example-playbook)
 
@@ -12,28 +12,27 @@ This example is taken from [`molecule/default/converge.yml`](https://github.com/
 
 ```yaml
 ---
-- name: Converge
+- become: true
+  gather_facts: true
   hosts: all
-  become: yes
-  gather_facts: yes
-
+  name: Converge
   roles:
-    - role: buluma.bitbucket
+  - role: buluma.bitbucket
 ```
 
 The machine needs to be prepared. In CI this is done using [`molecule/default/prepare.yml`](https://github.com/buluma/ansible-role-bitbucket/blob/master/molecule/default/prepare.yml):
 
 ```yaml
 ---
-- name: Prepare
+- become: true
+  gather_facts: false
   hosts: all
-  gather_facts: no
-  become: yes
-
+  name: Prepare
   roles:
-    - name: buluma.bootstrap
-    - name: buluma.git
-    - name: buluma.java
+  - name: buluma.bootstrap
+  - name: buluma.git
+  - name: buluma.java
+  - name: buluma.openjdk
 ```
 
 Also see a [full explanation and example](https://buluma.github.io/how-to-use-these-roles.html) on how to use these roles.
@@ -44,55 +43,25 @@ The default values for the variables are set in [`defaults/main.yml`](https://gi
 
 ```yaml
 ---
-# https://github.com/alvistack/ansible-role-bitbucket/tree/master/defaults
-# PostgreSQL JDBC release.
-postgresql_jdbc_release: "42.3"
-
-# PostgreSQL JDBC version.
-postgresql_jdbc_version: "{{ _postgresql_jdbc_version[postgresql_jdbc_release] }}"
-
-# PostgreSQL JDBC download details.
-postgresql_jdbc_download: "{{ _postgresql_jdbc_download[postgresql_jdbc_version] }}"
-
-# Bitbucket release.
-bitbucket_release: "7.21"
-
-# Bitbucket version.
-bitbucket_version: "{{ _bitbucket_version[bitbucket_release] }}"
-
-# Bitbucket download details.
-bitbucket_download: "{{ _bitbucket_download[bitbucket_version] }}"
-
-# Owner and group for Bitbucket.
-bitbucket_owner: "bitbucket"
-bitbucket_group: "bitbucket"
-
-# Bitbucket home directory.
-bitbucket_home: "/var/atlassian/application-data/bitbucket"
-
-# Bitbucket installation directory.
-bitbucket_catalina: "/opt/atlassian/bitbucket"
-
-# JVM minimal and maximum memory usage.
-bitbucket_jvm_minimum_memory: "2048m"
-bitbucket_jvm_maximum_memory: "2048m"
-
-# Proxy and context path setup.
-bitbucket_catalina_connector_proxyname: ~
-bitbucket_catalina_connector_proxyport: ~
-bitbucket_catalina_connector_scheme: "http"
-bitbucket_catalina_connector_secure: "false"
-bitbucket_catalina_context_path: ~
-
-# Atlassian Support recommended JVM arguments.
-bitbucket_jvm_support_recommended_args: >-
-  -Datlassian.plugins.enable.wait=300
-  -XX:+UnlockExperimentalVMOptions
-  -XX:+UseCGroupMemoryLimitForHeap
-  -XX:MaxRAMFraction=1
-
-# Session timeout (in mintues).
+bitbucket_autologin_cookie_age: "10080"
+bitbucket_catalina: /opt/atlassian/bitbucket
+bitbucket_catalina_connector_port: "7990"
+bitbucket_catalina_connector_proxyname:
+bitbucket_catalina_connector_proxyport:
+bitbucket_catalina_connector_scheme:
+bitbucket_catalina_connector_secure:
+bitbucket_catalina_context_path:
+bitbucket_group: bitbucket
+bitbucket_home: /var/atlassian/application-data/bitbucket
+bitbucket_jvm_maximum_memory: 2048m
+bitbucket_jvm_minimum_memory: 2048m
+bitbucket_jvm_reserved_code_cache_size: 512m
+bitbucket_jvm_support_recommended_args: -Datlassian.plugins.enable.wait=300
+  -XX:+IgnoreUnrecognizedVMOptions -XX:+UnlockExperimentalVMOptions
+bitbucket_owner: bitbucket
+bitbucket_release: "8.19"
 bitbucket_session_timeout: "120"
+bitbucket_version: "{{ _bitbucket_version[bitbucket_release] }}"
 ```
 
 ## [Requirements](#requirements)
@@ -103,18 +72,18 @@ bitbucket_session_timeout: "120"
 
 The following roles are used to prepare a system. You can prepare your system in another way.
 
-| Requirement | GitHub | Version |
+| Requirement | GitHub | GitLab |
 |-------------|--------|--------|
-|[buluma.bootstrap](https://galaxy.ansible.com/buluma/bootstrap)|[![Ansible Molecule](https://github.com/buluma/ansible-role-bootstrap/actions/workflows/molecule.yml/badge.svg)](https://github.com/buluma/ansible-role-bootstrap/actions/workflows/molecule.yml)|[![Version](https://img.shields.io/github/release/buluma/ansible-role-bootstrap.svg)](https://github.com/shadowwalker/ansible-role-bootstrap)|
-|[buluma.git](https://galaxy.ansible.com/buluma/git)|[![Ansible Molecule](https://github.com/buluma/ansible-role-git/actions/workflows/molecule.yml/badge.svg)](https://github.com/buluma/ansible-role-git/actions/workflows/molecule.yml)|[![Version](https://img.shields.io/github/release/buluma/ansible-role-git.svg)](https://github.com/shadowwalker/ansible-role-git)|
-|[buluma.java](https://galaxy.ansible.com/buluma/java)|[![Ansible Molecule](https://github.com/buluma/ansible-role-java/actions/workflows/molecule.yml/badge.svg)](https://github.com/buluma/ansible-role-java/actions/workflows/molecule.yml)|[![Version](https://img.shields.io/github/release/buluma/ansible-role-java.svg)](https://github.com/shadowwalker/ansible-role-java)|
+|[buluma.bootstrap](https://galaxy.ansible.com/buluma/bootstrap)|[![Build Status GitHub](https://github.com/buluma/ansible-role-bootstrap/workflows/Ansible%20Molecule/badge.svg)](https://github.com/buluma/ansible-role-bootstrap/actions)|[![Build Status GitLab](https://gitlab.com/shadowwalker/ansible-role-bootstrap/badges/master/pipeline.svg)](https://gitlab.com/shadowwalker/ansible-role-bootstrap)|
+|[buluma.git](https://galaxy.ansible.com/buluma/git)|[![Build Status GitHub](https://github.com/buluma/ansible-role-git/workflows/Ansible%20Molecule/badge.svg)](https://github.com/buluma/ansible-role-git/actions)|[![Build Status GitLab](https://gitlab.com/shadowwalker/ansible-role-git/badges/master/pipeline.svg)](https://gitlab.com/shadowwalker/ansible-role-git)|
+|[buluma.openjdk](https://galaxy.ansible.com/buluma/openjdk)|[![Build Status GitHub](https://github.com/buluma/ansible-role-openjdk/workflows/Ansible%20Molecule/badge.svg)](https://github.com/buluma/ansible-role-openjdk/actions)|[![Build Status GitLab](https://gitlab.com/shadowwalker/ansible-role-openjdk/badges/master/pipeline.svg)](https://gitlab.com/shadowwalker/ansible-role-openjdk)|
+|[buluma.java](https://galaxy.ansible.com/buluma/java)|[![Build Status GitHub](https://github.com/buluma/ansible-role-java/workflows/Ansible%20Molecule/badge.svg)](https://github.com/buluma/ansible-role-java/actions)|[![Build Status GitLab](https://gitlab.com/shadowwalker/ansible-role-java/badges/master/pipeline.svg)](https://gitlab.com/shadowwalker/ansible-role-java)|
 
 ## [Context](#context)
 
-This role is a part of many compatible roles. Have a look at [the documentation of these roles](https://buluma.github.io/) for further information.
+This role is part of many compatible roles. Have a look at [the documentation of these roles](https://buluma.github.io/) for further information.
 
 Here is an overview of related roles:
-
 ![dependencies](https://raw.githubusercontent.com/buluma/ansible-role-bitbucket/png/requirements.png "Dependencies")
 
 ## [Compatibility](#compatibility)
@@ -123,26 +92,25 @@ This role has been tested on these [container images](https://hub.docker.com/u/b
 
 |container|tags|
 |---------|----|
-|[EL](https://hub.docker.com/repository/docker/buluma/enterpriselinux/general)|all|
-|[opensuse](https://hub.docker.com/repository/docker/buluma/opensuse/general)|all|
+|[Ubuntu](https://hub.docker.com/r/buluma/ubuntu)|all|
+|[EL](https://hub.docker.com/r/buluma/enterpriselinux)|all|
+|[opensuse](https://hub.docker.com/r/buluma/opensuse)|all|
+|[Debian](https://hub.docker.com/r/buluma/debian)|all|
+|[Fedora](https://hub.docker.com/r/buluma/fedora)|all|
 
-The minimum version of Ansible required is 2.12, tests have been done to:
+The minimum version of Ansible required is 2.12, tests have been done on:
 
 - The previous version.
 - The current version.
 - The development version.
 
-If you find issues, please register them in [GitHub](https://github.com/buluma/ansible-role-bitbucket/issues)
-
-## [Changelog](#changelog)
-
-[Role History](https://github.com/buluma/ansible-role-bitbucket/blob/master/CHANGELOG.md)
+If you find issues, please register them on [GitHub](https://github.com/buluma/ansible-role-bitbucket/issues).
 
 ## [License](#license)
 
-[Apache-2.0](https://github.com/buluma/ansible-role-bitbucket/blob/master/LICENSE)
+[Apache-2.0](https://github.com/buluma/ansible-role-bitbucket/blob/master/LICENSE).
 
 ## [Author Information](#author-information)
 
-[Shadow Walker](https://buluma.github.io/)
+[Michael Buluma](https://buluma.github.io/)
 
